--- a/cart/templates/cart_summary.html
+++ b/cart/templates/cart_summary.html
@@ -32,23 +32,47 @@
         </header>
 <br/>
 <div class="container">
-
     {% for product in cart_products %}
-    <br/>
-    <div class="row">
-        <div class="col-md-3">
-            <img src="{{ product.image.url }}" class="img-responsive" width="200" height="200" />
+    <div class="card mb-4 p-3">
+        <div class="row align-items-center">
+            <div class="col-md-3">
+                <img src="{{ product.image.url }}" class="img-fluid" width="200" height="200" />
+            </div>
+            <div class="col-md-3">
+                <h4>{{ product.name }}</h4>
+            </div>
+            <div class="col-md-2">
+                <p>Rs.{{ product.price }}</p>
+            </div>
+            <div class="col-md-1">
+                <p>Qty</p>
+            </div>
+            <div class="col-md-2">
+                <select class="form-select" id="product_qty">
+                    {% for key, value in quantities.items %}
+                        {% if key == product.id|stringformat:"s" %}
+                            <option selected>{{ value.quantity }}</option>
+                        {% endif %}
+                    {% endfor %}
+                    {% for i in "12345" %}
+                        <option value="{{ i }}">{{ i }}</option>
+                    {% endfor %}
+                </select>
+            </div>
         </div>
-        <div class="col-md-3">
-            <h4>{{ product.name }}</h4>
+
+        <div class="row mt-3 justify-content-end">
+            <div class="col-auto">
+                <a href="{% url 'home' %}" class="btn btn-secondary me-2">Home</a>
+                <button type="button" data-index="{{ product.id }}" class="btn btn-secondary update-cart">Update Cart</button>
+            </div>
         </div>
-        <div class="col-md-3">Rs.{{ product.price }}</div>
+    </div>
     {% endfor %}
 </div>
 
-
-        <br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/>
-        {% endblock %}     
+<br/><br/><br/><br/><br/><br/><br/><br/>
+{% endblock %}     
         
     </body>
 </html>
